TestRunner: fix warnings